--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "ES2022",
+    "target": "es2024",
     "module": "nodenext",
-    "emitDecoratorMetadata": true,
     "declaration": true,
+    "sourceMap": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "incremental": true,
-    "sourceMap": true,
     "rootDir": ".",
     "baseUrl": "./src",
     "outDir": "./dist",
@@ -17,11 +17,9 @@
     "paths": {
     },
     "lib": [
-      "ES2022"
     ]
   },
   "include": [
-    "./src",
-    "./test"
+    "./src"
   ]
 }
