feat(license): change project license

--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
     "url": "https://github.com/SamWarden/tstemplate/issues"
   },
   "author": "SamWarden",
-  "license": "MIT"
+  "license": "CC0-1.0"
 }
